//service definition
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.service3"; //this is where you define your package name
option java_outer_classname = "Service3";

service service3 { //creating grp service. You specify methods

	rpc Login (authenticateRequest) returns (authenticateReply) {}
}

message authenticateRequest{
	string loginDetails = 10;
}

message authenticateReply{
	string message = 10;
}